--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,16 @@
     </licenses>
     <dependencies>
         <dependency>
+            <groupId>com.harium.etyl</groupId>
+            <artifactId>etyl</artifactId>
+            <version>1.2.0</version>
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.harium.keel</groupId>
             <artifactId>core</artifactId>
-            <version>1.1.2</version>
+            <version>1.1.3</version>
         </dependency>
         <dependency>
             <groupId>com.github.sarxos</groupId>
