--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,9 @@
         <dependency>
             <groupId>com.harium.keel</groupId>
             <artifactId>core</artifactId>
-            <version>1.1.5</version>
+            <version>1.2.0</version>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.github.sarxos</groupId>
