--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.harium.keel</groupId>
     <artifactId>keel-awt</artifactId>
-    <version>1.2.3</version>
+    <version>1.4.0</version>
     <packaging>jar</packaging>
     <name>Keel AWT</name>
     <description>Keel classes integrated with AWT</description>
@@ -25,36 +25,14 @@
         <dependency>
             <groupId>com.harium.etyl</groupId>
             <artifactId>etyl</artifactId>
-            <version>1.2.0</version>
+            <version>1.3.3</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>com.harium.keel</groupId>
             <artifactId>core</artifactId>
-            <version>1.2.3</version>
-            <scope>provided</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.github.sarxos</groupId>
-            <artifactId>v4l4j</artifactId>
-            <version>0.9.1-r507</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.sarxos</groupId>
-            <artifactId>webcam-capture</artifactId>
-            <version>0.3.11</version>
-        </dependency>
-        <dependency>
-            <groupId>com.nativelibs4java</groupId>
-            <artifactId>bridj</artifactId>
-            <version>0.6.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
+            <version>[1.4.0,)</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
